--- a/shAkalam/bRhad-devatA/1.md
+++ b/shAkalam/bRhad-devatA/1.md
@@ -225,8 +225,19 @@ title = "००१"
 तत्र तत्र यथावच्च मन्त्रान्कर्मसु योजयेत् ।  
 देवतायाः परिज्ञानात् तद्धि कर्म समृध्यते ॥ २१ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 आद्यन्तयोस्तु सूक्तानां प्रसङ्गपरिकीर्तनात् ।  
-स्तोतृभिर्देवता नाम्ना उपेक्षेतेह मन्त्रवित् ॥ २२ । ।  
+स्तोतृभिर्देवता नाम्ना उपेक्षेतेह मन्त्रवित् ॥ २२ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+आद्यन्तयोस्तु सूक्तानां प्रसङ्गपरिकीर्तनात् ।  
+स्तोतृभिर्देवता नाम्ना उपेक्षेतेह मन्त्रवित् ॥ २२ ॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -335,8 +346,20 @@ title = "००१"
 नाकर्मकोऽस्ति भावो हि न नामास्ति निरर्थकम् ।  
 नान्यत्र भावान्नामानि तस्मात्सर्वाणि कर्मतः ॥ ३१ ॥
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 मङ्गलात्क्रियते यच्च नामोपवसनाच्च यत् ।  
-भवत्येव तु सा ह्याशीः स्वस्त्यादेर्मङ्गलादिह । । ३२ ॥  
+भवत्येव तु सा ह्याशीः स्वस्त्यादेर्मङ्गलादिह ॥३२ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+मङ्गलात्क्रियते यच्च नामोपवसनाच्च यत् ।  
+भवत्येव तु सा ह्याशीः स्वस्त्यादेर्मङ्गलादिह ॥३२ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -447,8 +470,19 @@ title = "००१"
 शब्देनोच्चरितेनेह येन द्रव्यं प्रतीयते ।  
 तदक्षरविधौ युक्तं नामेत्याहुर्मनीषिणः ॥ ४२ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अष्टौ यत्र प्रयुज्यन्ते नानार्थेषु विभक्तयः ।  
-तन्नाम कवयः प्राहुर् भेदे वचनलिङ्गयोः । । ४३ ॥  
+तन्नाम कवयः प्राहुर् भेदे वचनलिङ्गयोः ॥४३ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+अष्टौ यत्र प्रयुज्यन्ते नानार्थेषु विभक्तयः ।  
+तन्नाम कवयः प्राहुर् भेदे वचनलिङ्गयोः ॥४३ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
