--- a/shAkalam/bRhad-devatA/2.md
+++ b/shAkalam/bRhad-devatA/2.md
@@ -14,8 +14,19 @@ title = "००२"
 आह चैवास्य द्वौ स्तोमाव् आश्रयौ शाकटायनः ।  
 यश्च पञ्चदशो नाम्ना संख्यया त्रिणवश्च यः ॥ १ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 संस्तुतश्चैव पूष्णा च विष्णुना वरुणेन च ।  
-सोमवाय्वग्निकुत्सैश्च ब्रह्मणस्पतिनैव च ॥ २ । ।  
+सोमवाय्वग्निकुत्सैश्च ब्रह्मणस्पतिनैव च ॥ २ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+संस्तुतश्चैव पूष्णा च विष्णुना वरुणेन च ।  
+सोमवाय्वग्निकुत्सैश्च ब्रह्मणस्पतिनैव च ॥ २ ॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -88,8 +99,19 @@ title = "००२"
 तस्य मुख्यतमौ देवाव् अश्विनौ सूर्यमाश्रितौ ।  
 वृषाकपायी सूर्योषाः सूर्यस्यैव तु पत्नयः ॥ ८ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अमुतोऽर्वाङ् निवर्तन्ते प्रतिलोमास्तदाश्रयाः ।  
-पुरोदयात्तामुषसं सूर्यां मध्यंदिने स्थिते ॥ ९ । ।  
+पुरोदयात्तामुषसं सूर्यां मध्यंदिने स्थिते ॥ ९ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+अमुतोऽर्वाङ् निवर्तन्ते प्रतिलोमास्तदाश्रयाः ।  
+पुरोदयात्तामुषसं सूर्यां मध्यंदिने स्थिते ॥ ९ ॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -102,10 +124,33 @@ title = "००२"
 वृषाकपायीं सूर्यस्य तामेवाहुस्तु निम्रुचि ।  
 तस्याश्रये सरण्यूश्च भगः पूषा वृषाकपिः ॥ २.१० ॥
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 यमो वैश्वानरो विष्णुर् वरुणश्चैकपादजः ।  
-पृथिवी च समुद्रश्च देवाः सप्तर्षयश्च ये । । ११ । ।  
+पृथिवी च समुद्रश्च देवाः सप्तर्षयश्च ये ॥११ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+यमो वैश्वानरो विष्णुर् वरुणश्चैकपादजः ।  
+पृथिवी च समुद्रश्च देवाः सप्तर्षयश्च ये ॥११ ॥ 
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 आदित्याः केशिसाध्याश्च सविता वसुभिर्मनुः ।  
-दध्यङ्ङथर्वा विश्वे च वाजिनो देवपत्नयः ॥ १ २॥  
+दध्यङ्ङथर्वा विश्वे च वाजिनो देवपत्नयः ॥ १२॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+आदित्याः केशिसाध्याश्च सविता वसुभिर्मनुः ।  
+दध्यङ्ङथर्वा विश्वे च वाजिनो देवपत्नयः ॥ १२॥  
+</details>
+
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -648,8 +693,19 @@ title = "००२"
 स्तीर्णेऽन्तरिक्षे क्षियति यद्वा तूर्णं क्षरत्यसौ ।  
 अरिष्टनेमिस्तार्क्ष्यर्षिस् तार्क्ष्यं तेनैवमुक्तवान् ॥ ५८ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 रुवन्व्योम्न्युदयं याति कृन्तत्राद्विसृजन्नपः ।  
-पुरूरवसमाहैनं स्ववाक्येनोरुवासिनी । । ५९ ॥  
+पुरूरवसमाहैनं स्ववाक्येनोरुवासिनी ॥५९ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+रुवन्व्योम्न्युदयं याति कृन्तत्राद्विसृजन्नपः ।  
+पुरूरवसमाहैनं स्ववाक्येनोरुवासिनी ॥५९ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -711,8 +767,19 @@ title = "००२"
 त्रीणि भान्ति रजांस्यस्य यत्पदानि तु तेजसा ।  
 तेन मेधातिथिः प्राह विष्णुमेनं त्रिविक्रमम् ॥ ६४ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 कृत्वा सायं पृथग्याति भूतेभ्यस्तमसोऽत्यये ।  
-प्रकाशं किरणैः कुर्वंस् तेनैनं केशिनं विदुः । । ६५ ॥  
+प्रकाशं किरणैः कुर्वंस् तेनैनं केशिनं विदुः ॥६५ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+कृत्वा सायं पृथग्याति भूतेभ्यस्तमसोऽत्यये ।  
+प्रकाशं किरणैः कुर्वंस् तेनैनं केशिनं विदुः ॥६५ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -850,8 +917,19 @@ title = "००२"
 गौर्धेनुर्देवपत्न्योऽघ्न्या पथ्या स्वस्तिश्च रोदसी ।  
 नैपातिकानि ऋग्भाञ्जि येषां नामानि कानिचित् ॥ ७८ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 यदा तु वाग्भवत्येषा सूर्यामुं लोकमाश्रिता ।  
-तथा सूक्तमुषा भूत्वा सूर्या च भजतेऽखिलम् । । ७९ ॥  
+तथा सूक्तमुषा भूत्वा सूर्या च भजतेऽखिलम् ॥७९ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+यदा तु वाग्भवत्येषा सूर्यामुं लोकमाश्रिता ।  
+तथा सूक्तमुषा भूत्वा सूर्या च भजतेऽखिलम् ॥७९ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -1180,10 +1258,32 @@ title = "००२"
 शब्दरूपं पदार्थश्च व्युत्पत्तिः प्रकृतिर्गुणः ।  
 सर्वमेतदनेकार्थं दशानवगमे गुणाः ॥ १०८ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 सामान्यवाचिनः शब्दा विशेषे स्थापिताः क्वचित् ।  
-पलायने यथा वृत्तिः को नु मर्या इतीषते ॥ १ ०९॥  
+पलायने यथा वृत्तिः को नु मर्या इतीषते ॥ १०९॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+सामान्यवाचिनः शब्दा विशेषे स्थापिताः क्वचित् ।  
+पलायने यथा वृत्तिः को नु मर्या इतीषते ॥ १०९॥
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विशेषवाचिनस्त्वन्ये सामान्ये स्थापिताः क्वचित् ।  
-हिमेनाग्निमिति मन्त्रे हिमशब्दो निदर्शनम् । । २.११० ॥  
+हिमेनाग्निमिति मन्त्रे हिमशब्दो निदर्शनम् ॥२.११० ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विशेषवाचिनस्त्वन्ये सामान्ये स्थापिताः क्वचित् ।  
+हिमेनाग्निमिति मन्त्रे हिमशब्दो निदर्शनम् ॥२.११० ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
