--- a/shAkalam/bRhad-devatA/3.md
+++ b/shAkalam/bRhad-devatA/3.md
@@ -1191,8 +1191,19 @@ title = "००३"
 वसिष्वा हीति चाग्नेये ऋगग्नेर्मध्यमस्य तु ।  
 जराबोधेति विज्ञेया वैश्वदेव्युत्तमा नमः ॥ ९९ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 पराश्चतस्रो यत्रेति इन्द्रोलूखलयो स्तुतिः ।  
-मन्येते यास्ककात्थक्याव् इन्द्रस्येति तु भागुरिः । । १०० ॥  
+मन्येते यास्ककात्थक्याव् इन्द्रस्येति तु भागुरिः ॥१०० ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+पराश्चतस्रो यत्रेति इन्द्रोलूखलयो स्तुतिः ।  
+मन्येते यास्ककात्थक्याव् इन्द्रस्येति तु भागुरिः ॥१०० ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -1467,12 +1478,49 @@ title = "००३"
 आगच्छतोऽथ तान्दृष्ट्वा क्व वसत्यस्य तत्त्वतः ।  
 सर्वदृक्त्वं च वरुणस्यार्यम्णश्चेत्युपालभत् ॥ १३५ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 कूपेष्टकाभिर्व्रणितान्य् सङ्गान्येवाभयन्मम ।  
 दृष्ट्वा सर्वानहं स्तौमि यद्यप्येको न पश्यति ॥१ ३५॥  
+
+</details>
+
+<details><summary>मूलम्</summary>
+
+कूपेष्टकाभिर्व्रणितान्य् सङ्गान्येवाभयन्मम ।  
+दृष्ट्वा सर्वानहं स्तौमि यद्यप्येको न पश्यति ॥१ ३५॥  
+
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 बृहस्पतिप्रचोदिता विश्वेदेवगणास्त्रयः ।  
 जग्मुस्त्रितस्य तं यज्ञं भागांश्च जगृहुः सह ॥ १ ३६॥  
+
+</details>
+
+<details><summary>मूलम्</summary>
+
+बृहस्पतिप्रचोदिता विश्वेदेवगणास्त्रयः ।  
+जग्मुस्त्रितस्य तं यज्ञं भागांश्च जगृहुः सह ॥ १ ३६॥  
+
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 बृहस्पतिस्त्रितस्यैतज् ज्ञानं विज्ञानमेव च ।  
-तृचेनान्त्येन सूक्तस्य जगादर्षिरसाविति । । १३७ । ।  
+तृचेनान्त्येन सूक्तस्य जगादर्षिरसाविति ॥१३७ ॥ 
+
+</details>
+
+<details><summary>मूलम्</summary>
+
+बृहस्पतिस्त्रितस्यैतज् ज्ञानं विज्ञानमेव च ।  
+तृचेनान्त्येन सूक्तस्य जगादर्षिरसाविति ॥१३७ ॥ 
+
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
