--- a/shAkalam/bRhad-devatA/4.md
+++ b/shAkalam/bRhad-devatA/4.md
@@ -50,8 +50,19 @@ title = "००४"
 अथाग्नेये अग्निमित्युत्तरे यं पञ्चैन्द्राणि प्र तदैन्दव्यृगत्र ।  
 शं तमिन्द्रापर्वतौ सह स्तुतौ त्विन्द्रं मेन इह यास्कः प्रधानम् ॥ ४ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 ऋक्षु स्तुतः पर्वतवद्धि वज्रो द्विवत्स्तुतौ चेन्द्रमाहुः प्रधानम् ।  
-आ त्वा वायोनव पञ्चेन्द्रवाय्वोर् एका वायोरुत्तरं द्विप्रधानम् ॥ ५ । ।  
+आ त्वा वायोनव पञ्चेन्द्रवाय्वोर् एका वायोरुत्तरं द्विप्रधानम् ॥ ५ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+ऋक्षु स्तुतः पर्वतवद्धि वज्रो द्विवत्स्तुतौ चेन्द्रमाहुः प्रधानम् ।  
+आ त्वा वायोनव पञ्चेन्द्रवाय्वोर् एका वायोरुत्तरं द्विप्रधानम् ॥ ५ ॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -76,10 +87,31 @@ title = "००४"
 मैत्रावरुणं सुषुमेति सूक्तं प्रप्र पौष्णं वैश्वदेवं तृतीयम् ।  
 अस्तु श्रौषड् वैश्वदेवं तृतीयं वैश्वदेवं स्याद्बहुदेवतेषु ॥ ७ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 बहुशस्तु वैश्वदेवेषु सन्त्यृचः पादार्धर्चा द्वैपदास्त्रैपदाश्च ।  
 द्विप्रधाना अपि चैकप्रधाना बहुप्रधाना अपि वैश्वदेवाः ॥८  
+</details>
+
+<details><summary>मूलम्</summary>
+
+बहुशस्तु वैश्वदेवेषु सन्त्यृचः पादार्धर्चा द्वैपदास्त्रैपदाश्च ।  
+द्विप्रधाना अपि चैकप्रधाना बहुप्रधाना अपि वैश्वदेवाः ॥८  
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 वैश्वदेवी मैत्रावरुणी द्वितीया तिस्रोऽश्विभ्यां तत ऐन्द्री ततोऽग्नेः ।  
-मारुत्येका तत ऐन्द्राग्न्यनन्तरा बार्हस्पत्या चोत्तमा स्तौति देवान् ॥ ९ । ।  
+मारुत्येका तत ऐन्द्राग्न्यनन्तरा बार्हस्पत्या चोत्तमा स्तौति देवान् ॥ ९ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+वैश्वदेवी मैत्रावरुणी द्वितीया तिस्रोऽश्विभ्यां तत ऐन्द्री ततोऽग्नेः ।  
+मारुत्येका तत ऐन्द्राग्न्यनन्तरा बार्हस्पत्या चोत्तमा स्तौति देवान् ॥ ९ ॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -92,8 +124,21 @@ title = "००४"
 ऋषीनृषिर्वा स्तौति दध्यङ्ह मेऽस्याम् आत्मानं वा तेषु शंसन्स्वजन्म ।  
 तस्मादस्यां विप्रवदन्ति केचिद् इन्द्राग्नी तस्यां तु निपातभाजौ ॥ १० ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 द्वावुचथ्यबृहस्पती ऋषिपुत्रौ बभूवतुः ।  
-आसीदुचथ्यभार्या तु ममता नाम भार्गवी । । ११ ॥  
+आसीदुचथ्यभार्या तु ममता नाम भार्गवी ॥११ ॥  
+
+</details>
+
+<details><summary>मूलम्</summary>
+
+द्वावुचथ्यबृहस्पती ऋषिपुत्रौ बभूवतुः ।  
+आसीदुचथ्यभार्या तु ममता नाम भार्गवी ॥११ ॥  
+
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -166,8 +211,19 @@ title = "००४"
 स्तुतौ तु मित्रावरुणौ सूक्तैर्मित्रमिति त्रिभिः ।  
 मित्रं मैत्रीं वदन्येताम् आ धेनवश्च शंसति ॥ १७ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अदितिं वाथवाप्यग्निं तथा रूपं हि दृश्यते ।  
-अग्निं मेनेऽदितिं त्वेव कुत्से चेह च शौनकः । । १८ ॥  
+अग्निं मेनेऽदितिं त्वेव कुत्से चेह च शौनकः ॥१८ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+अदितिं वाथवाप्यग्निं तथा रूपं हि दृश्यते ।  
+अग्निं मेनेऽदितिं त्वेव कुत्से चेह च शौनकः ॥१८ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -300,8 +356,20 @@ title = "००४"
 संज्ञप्तवदसंज्ञप्तं भविष्यं चाह भूतवत् ।  
 तस्य मांसस्य सूनस्य चरूणां हविषस्तथा ॥ २९ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 वासोऽधिवाससोश्चात्र यद्विशस्यं च कीर्तितम् ।  
-गात्रस्य शूलस्थूणानां स्वधितेश्च प्रकीर्तनम् ॥ ३० । ।  
+गात्रस्य शूलस्थूणानां स्वधितेश्च प्रकीर्तनम् ॥ ३० ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+वासोऽधिवाससोश्चात्र यद्विशस्यं च कीर्तितम् ।  
+गात्रस्य शूलस्थूणानां स्वधितेश्च प्रकीर्तनम् ॥ ३० ॥ 
+</details>
+
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -410,8 +478,20 @@ title = "००४"
 मातापुत्रौ तु वाक्प्राणौ माता वागितरः सुतः ।  
 सरस्वन्तमिति प्राणो वाचं प्राहुः सरस्वतीम् ॥ ३९ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 शरीरमिन्द्रियैर्युक्तं क्षेत्रमित्यभिधीयते ।  
-वेद तत्प्राण एवैकस् तस्मात्क्षेत्रज्ञ उच्यते ॥ ४० । ।  
+वेद तत्प्राण एवैकस् तस्मात्क्षेत्रज्ञ उच्यते ॥ ४० ॥ 
+
+</details>
+
+<details><summary>मूलम्</summary>
+
+शरीरमिन्द्रियैर्युक्तं क्षेत्रमित्यभिधीयते ।  
+वेद तत्प्राण एवैकस् तस्मात्क्षेत्रज्ञ उच्यते ॥ ४० ॥ 
+
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -448,8 +528,19 @@ title = "००४"
 सूक्तमल्पस्तवं त्वेतज् ज्ञानमेव प्रशंसति ।  
 प्रवादबहुलत्वाच्च ततः सलिलमुच्यते ॥ ४३ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 मारुतैन्द्रस्तु संवादः कयेति परमः स्मृतः ।  
-मरुतामयुजस्त्वैन्द्रयो युग्माः सर्वाः सहान्त्यया ॥ ४४। ।  
+मरुतामयुजस्त्वैन्द्रयो युग्माः सर्वाः सहान्त्यया ॥ ४४॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+मारुतैन्द्रस्तु संवादः कयेति परमः स्मृतः ।  
+मरुतामयुजस्त्वैन्द्रयो युग्माः सर्वाः सहान्त्यया ॥ ४४॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -594,8 +685,20 @@ title = "००४"
 स्तुतश्चतसृभिश्चेन्द्र स्तुतास इति तैः सह ।  
 मरुद्भिः सह यत्रेन्द्रो मरुत्वांस्तत्र सोऽभवत् ॥ ५६॥।
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 ऋतौ स्नातामृषिर्भार्यां लोपमुद्रां यशस्विनीम् ।  
-उपजल्पितुमारेभे रहःसंयोगकाम्यया ॥ ५७। ।  
+उपजल्पितुमारेभे रहःसंयोगकाम्यया ॥ ५७॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+ऋतौ स्नातामृषिर्भार्यां लोपमुद्रां यशस्विनीम् ।  
+उपजल्पितुमारेभे रहःसंयोगकाम्यया ॥ ५७॥ 
+</details>
+
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -620,14 +723,56 @@ title = "००४"
 विदित्वा तपसा सर्वं तयोर्भावं रिरंसतोः ।  
 श्रुत्वैनः कृतवानस्मि ब्रह्मचार्युत्तमे जगौ ॥५९॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 प्रशास्य तं परिष्वज्य गुरू मूर्ध्न्यवजघ्रतुः ।  
-स्मित्वैनमाहतुश्चोभाव् अनागा असि पुत्रक । । ६ ०॥  
+स्मित्वैनमाहतुश्चोभाव् अनागा असि पुत्रक ॥६०॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+प्रशास्य तं परिष्वज्य गुरू मूर्ध्न्यवजघ्रतुः ।  
+स्मित्वैनमाहतुश्चोभाव् अनागा असि पुत्रक ॥६०॥  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 युवो रजांसीति ततः सूक्तैः पञ्चभिरश्विनौ ।  
-अगस्त्य एव तुष्टाव कतरेति परेण तु ॥ ६१ । ।  
+अगस्त्य एव तुष्टाव कतरेति परेण तु ॥ ६१ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+युवो रजांसीति ततः सूक्तैः पञ्चभिरश्विनौ ।  
+अगस्त्य एव तुष्टाव कतरेति परेण तु ॥ ६१ ॥ 
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 द्यावापृथिव्यौ सूक्तेन आ नो विश्वान्दिवौकसः ।  
-पितुमन्नं समिद्धाप्र्यो अग्निमग्ने नयेति च । । ६ २॥  
+पितुमन्नं समिद्धाप्र्यो अग्निमग्ने नयेति च ॥६२॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+द्यावापृथिव्यौ सूक्तेन आ नो विश्वान्दिवौकसः ।  
+पितुमन्नं समिद्धाप्र्यो अग्निमग्ने नयेति च ॥६२॥  
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 बृहस्पतेरनर्वाणं कङ्कतोपनिषत्परम् ।  
-अपां तृणानां सूर्यस्य केचिदेतां स्तुतिं विदुः । । ६३ । ।  
+अपां तृणानां सूर्यस्य केचिदेतां स्तुतिं विदुः ॥६३ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+बृहस्पतेरनर्वाणं कङ्कतोपनिषत्परम् ।  
+अपां तृणानां सूर्यस्य केचिदेतां स्तुतिं विदुः ॥६३ ॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -640,10 +785,34 @@ title = "००४"
 ददर्श तदगस्त्यो वा विषघ्नं विषशङ्कया ।  
 अदृष्टाख्यो नष्टरूपः सूक्तस्यानयोऽत्र तु द्वृचः ॥ ६४॥
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अस्तौद्गृत्समदोऽग्निं च जातवेदस्यमाप्रियः ।  
-यज्ञेनाथ समिद्धोऽग्निर् अतोऽग्निं सप्तभिर्हुवे । ।६५। ।  
+यज्ञेनाथ समिद्धोऽग्निर् अतोऽग्निं सप्तभिर्हुवे । ।६५॥ 
+
+</details>
+
+<details><summary>मूलम्</summary>
+
+अस्तौद्गृत्समदोऽग्निं च जातवेदस्यमाप्रियः ।  
+यज्ञेनाथ समिद्धोऽग्निर् अतोऽग्निं सप्तभिर्हुवे । ।६५॥ 
+
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 संयुज्य तपसात्मानम् ऐन्द्रं बिभ्रन्महद्वपुः ।  
-अदृश्यत मुहूर्तेन दिवि च व्योम्नि चेह च ॥ ६६। ।  
+अदृश्यत मुहूर्तेन दिवि च व्योम्नि चेह च ॥ ६६॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+संयुज्य तपसात्मानम् ऐन्द्रं बिभ्रन्महद्वपुः ।  
+अदृश्यत मुहूर्तेन दिवि च व्योम्नि चेह च ॥ ६६॥ 
+
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -740,10 +909,34 @@ title = "००४"
 निरुक्तं तदिदं वार्यम् इन्द्र श्रेष्ठान्यृचान्त्यया ।  
 वव्रे वरमिदं सर्वं तदाकर्ण्य शचीपतिः ॥ ७४ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तथेत्युक्त्वा तुराषाट् तु पाणौ जग्राह दक्षिणे।  
-ऋषिश्चास्य सखित्वेन पाणिना पाणिमस्पृशत् । । ७५ । ।  
+ऋषिश्चास्य सखित्वेन पाणिना पाणिमस्पृशत् ॥७५ ॥ 
+
+</details>
+
+<details><summary>मूलम्</summary>
+
+तथेत्युक्त्वा तुराषाट् तु पाणौ जग्राह दक्षिणे।  
+ऋषिश्चास्य सखित्वेन पाणिना पाणिमस्पृशत् ॥७५ ॥ 
+
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 सहितौ जग्मतुश्चैवं महेन्द्रसदनं प्रति ।  
-तत्रैनमार्हयत्प्रीत्या स्वयमेव पुरंदरः । । ७६ ॥  
+तत्रैनमार्हयत्प्रीत्या स्वयमेव पुरंदरः ॥७६ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+सहितौ जग्मतुश्चैवं महेन्द्रसदनं प्रति ।  
+तत्रैनमार्हयत्प्रीत्या स्वयमेव पुरंदरः ॥७६ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -756,8 +949,19 @@ title = "००४"
 कर्मणा विधिदृष्टेन तमृषिं चाभ्यपूजयत् ।  
 सखित्वाच्च पुनश्चैनम् उवाच हरिवाहनः ॥ ७७ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 गृणन्मादयसे यस्मात् त्वमस्मानृषिसत्तम ।  
-तस्माद्गृत्समदो नाम शौनहोत्रो भविष्यसि । । ७८ ॥  
+तस्माद्गृत्समदो नाम शौनहोत्रो भविष्यसि ॥७८ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+गृणन्मादयसे यस्मात् त्वमस्मानृषिसत्तम ।  
+तस्माद्गृत्समदो नाम शौनहोत्रो भविष्यसि ॥७८ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -794,8 +998,21 @@ title = "००४"
 गणानां विश्वमित्यस्यां सहेन्द्राब्राह्मणस्पती ।  
 बृहस्पतिं प्रसङ्गाद्वा ब्रह्मणस्पतिमेव च ॥ ८१ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तुष्टाव कर्मणैकेन प्रभावस्यान्तरं द्वयोः ।  
-मित्रावरुणदक्षांशातुविजातभगार्यम्णाम् । ।८२। ।  
+मित्रावरुणदक्षांशातुविजातभगार्यम्णाम् । ।८२॥ 
+
+</details>
+
+<details><summary>मूलम्</summary>
+
+तुष्टाव कर्मणैकेन प्रभावस्यान्तरं द्वयोः ।  
+मित्रावरुणदक्षांशातुविजातभगार्यम्णाम् । ।८२॥ 
+
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -808,8 +1025,19 @@ title = "००४"
 आदित्यानामिमाः सूक्तम् इदं वारुणमुच्यते ।  
 वारुणी यो म इत्याद्या दुःस्वप्नाद्यप्रणाशिनी ॥८३ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 धृतव्रता वैश्वदेवम् शतमैन्द्रं परं तु यत् ।  
-प्र हि क्रतुमिति त्वस्याम् इन्द्रासोमौ सह स्तुतौ ॥८४। ।  
+प्र हि क्रतुमिति त्वस्याम् इन्द्रासोमौ सह स्तुतौ ॥८४॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+धृतव्रता वैश्वदेवम् शतमैन्द्रं परं तु यत् ।  
+प्र हि क्रतुमिति त्वस्याम् इन्द्रासोमौ सह स्तुतौ ॥८४॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -897,8 +1125,19 @@ title = "००४"
 प्रेत्यृक्स्तौति हविर्धाने अग्निस्तत्र निपातभाक् ।  
 द्यावापृथिव्यौ द्यावेति हविर्धाने ततः परे ॥ ९२ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स्तुतिं तु पुनरेवेच्छन्न् इन्द्रो भूत्वा कपिञ्जलः ।  
-ऋषेर्जिगमिषोराशां ववाशास्थाय दक्षिणाम् । । ९३ । ।  
+ऋषेर्जिगमिषोराशां ववाशास्थाय दक्षिणाम् ॥९३ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+स्तुतिं तु पुनरेवेच्छन्न् इन्द्रो भूत्वा कपिञ्जलः ।  
+ऋषेर्जिगमिषोराशां ववाशास्थाय दक्षिणाम् ॥९३ ॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -923,12 +1162,46 @@ title = "००४"
 प्रशास्य गां यस्तपसाभ्यगच्छद् ब्रह्मर्षितामेकशतं च पुत्रान् ।  
 स गथिपुत्रस्तु जगाद सूक्तं सोमस्य मेत्याग्नेयं यत्परे च ॥ ९५ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 वैश्वानरीये समित्समिदाप्र्यो द्वे आग्नेये उत्तरे त्वत्र सूक्ते ।  
-द्यावापृथिव्या उषसो निपाता आपोऽथ देवाः पितरश्च मित्रः । । ९६ ॥  
+द्यावापृथिव्या उषसो निपाता आपोऽथ देवाः पितरश्च मित्रः ॥९६ ॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+वैश्वानरीये समित्समिदाप्र्यो द्वे आग्नेये उत्तरे त्वत्र सूक्ते ।  
+द्यावापृथिव्या उषसो निपाता आपोऽथ देवाः पितरश्च मित्रः ॥९६ ॥
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 आग्नेयेषु दृश्यन्ते स्तुतास्तु वैश्वानरो वरुणो जातवेदाः ।  
-स्तुयेतैका यत्र यत्रास्तुतिर्वा निपात्यर्थांश्चोपमार्थांश्च विद्यात् । । ९७ ॥  
+स्तुयेतैका यत्र यत्रास्तुतिर्वा निपात्यर्थांश्चोपमार्थांश्च विद्यात् ॥९७ ॥  
+
+</details>
+
+<details><summary>मूलम्</summary>
+
+आग्नेयेषु दृश्यन्ते स्तुतास्तु वैश्वानरो वरुणो जातवेदाः ।  
+स्तुयेतैका यत्र यत्रास्तुतिर्वा निपात्यर्थांश्चोपमार्थांश्च विद्यात् ॥९७ ॥  
+
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 राजर्षयो गृत्समदा वसिष्ठा भरद्वाजाः कुशिका गोतमाश्च ।  
-विश्वेऽश्विनावङ्गिरसोऽत्रयोऽदितिर् भोजाः कण्वा भृगवो रोदसी दिशः । । ९८ ॥  
+विश्वेऽश्विनावङ्गिरसोऽत्रयोऽदितिर् भोजाः कण्वा भृगवो रोदसी दिशः ॥९८ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+राजर्षयो गृत्समदा वसिष्ठा भरद्वाजाः कुशिका गोतमाश्च ।  
+विश्वेऽश्विनावङ्गिरसोऽत्रयोऽदितिर् भोजाः कण्वा भृगवो रोदसी दिशः ॥९८ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -941,10 +1214,32 @@ title = "००४"
 सावित्रसौभ्याश्विनमारुतेषु ऐन्द्राग्नेये रौद्रसौर्यौषसेषु ।  
 आदावन्ते सक्तमध्ये स्तुतास्तु न व्याघ्नन्ति देवताः सूक्तभाजः ॥ ९९ ॥
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अग्नेः सप्तदशोऽध्याय ऊर्ध्वं ऊ षु ण ऊतये ।  
-एते काण्व्यावृचौ यौप्याव् अञ्जन्ति पञ्च च । । १०० ॥  
+एते काण्व्यावृचौ यौप्याव् अञ्जन्ति पञ्च च ॥१०० ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+अग्नेः सप्तदशोऽध्याय ऊर्ध्वं ऊ षु ण ऊतये ।  
+एते काण्व्यावृचौ यौप्याव् अञ्जन्ति पञ्च च ॥१०० ॥  
+</details>
+ 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 शेषा बहुभ्यो यूपेभ्यो वैश्वदेवी त्वृगष्टमी ।  
-अस्यान्त्या व्रश्चना योक्ता षष्ठमैन्द्राग्नमुच्यते । । १०१ ॥  
+अस्यान्त्या व्रश्चना योक्ता षष्ठमैन्द्राग्नमुच्यते ॥१०१ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+शेषा बहुभ्यो यूपेभ्यो वैश्वदेवी त्वृगष्टमी ।  
+अस्यान्त्या व्रश्चना योक्ता षष्ठमैन्द्राग्नमुच्यते ॥१०१ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -1041,10 +1336,32 @@ title = "००४"
 षष्ट्याष्टम्या चतुर्थ्या च दशम्या चेतरा ऋषेः ।  
 सप्तम्यामृचि षष्ठ्यां च यौ देवौ परिकीर्तितौ ॥ १०९ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 निपातिनौ तु तौ ज्ञेयौ ऐन्द्रापार्वत्यृगुत्तमे ।  
-करोति पुत्रिकां नाम यथा दुहितरं तथा । । ११० । ।  
+करोति पुत्रिकां नाम यथा दुहितरं तथा ॥११० ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+निपातिनौ तु तौ ज्ञेयौ ऐन्द्रापार्वत्यृगुत्तमे ।  
+करोति पुत्रिकां नाम यथा दुहितरं तथा ॥११० ॥ 
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तस्यां सिञ्चति रेतो वा तच्छासदिति कीर्तितम् ।  
-रिक्थस्य दुहितुर्दानं नेत्यृचि प्रतिषिध्यते ॥ १११ । ।  
+रिक्थस्य दुहितुर्दानं नेत्यृचि प्रतिषिध्यते ॥ १११ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+तस्यां सिञ्चति रेतो वा तच्छासदिति कीर्तितम् ।  
+रिक्थस्य दुहितुर्दानं नेत्यृचि प्रतिषिध्यते ॥ १११ ॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -1057,8 +1374,19 @@ title = "००४"
 तस्याश्चाह यवीयांसं भ्रातरं ज्येष्ठवत्सुतम् ।  
 सुदासश्च महायज्ञे शक्तिना गाथिसूनवे ॥ ११२ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 निगृहीतं बलाच्चेतः सोऽवसीदद्विचेतनः ।  
-तस्मै ब्राह्मीं तु सौरीं वा नाम्ना वाचं ससर्परीम् । । ११३ । ।  
+तस्मै ब्राह्मीं तु सौरीं वा नाम्ना वाचं ससर्परीम् ॥११३ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+निगृहीतं बलाच्चेतः सोऽवसीदद्विचेतनः ।  
+तस्मै ब्राह्मीं तु सौरीं वा नाम्ना वाचं ससर्परीम् ॥११३ ॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -1085,8 +1413,19 @@ title = "००४"
 ससर्परीरिति द्वाभ्याम् ऋग्भ्यां वाचं स्तुवन्स्वयम् ।  
 स्थिरावित्यनसोऽङ्गान्यनडुहश्च गृहान्व्रजन् ॥ ११६ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 ततश्च स्वशरीरेण गृहान्गच्छन्परीददे ।  
-पराश्चतस्रो यास्त्वत्र वसिष्ठद्वेषिण्यः स्मृताः । । ११७ ॥  
+पराश्चतस्रो यास्त्वत्र वसिष्ठद्वेषिण्यः स्मृताः ॥११७ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+ततश्च स्वशरीरेण गृहान्गच्छन्परीददे ।  
+पराश्चतस्रो यास्त्वत्र वसिष्ठद्वेषिण्यः स्मृताः ॥११७ ॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -1113,10 +1452,32 @@ title = "००४"
 शतधा भिद्यते मूर्धा कीर्तितेन श्रुतेन वा ।  
 तेषां बालाः प्रमीयन्ते तस्मात्तास्तु न कीर्तयेत् ॥ १२० ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विश्वांश्च देवांस्तुष्टाव चतुर्भिरिममित्यृषिः ।  
-अस्तौद्विश्वात्मना सर्वान् मन्यमानः परं पदम् । । १२१ ॥  
+अस्तौद्विश्वात्मना सर्वान् मन्यमानः परं पदम् ॥१२१ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विश्वांश्च देवांस्तुष्टाव चतुर्भिरिममित्यृषिः ।  
+अस्तौद्विश्वात्मना सर्वान् मन्यमानः परं पदम् ॥१२१ ॥  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 देवानामसुरत्वं तद् एकं महदितीरयन् ।  
-अश्विनौ मित्र ऋभवो धेनुर्मित्र इहेह वः ॥ १ २२॥  
+अश्विनौ मित्र ऋभवो धेनुर्मित्र इहेह वः ॥ १२२॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+देवानामसुरत्वं तद् एकं महदितीरयन् ।  
+अश्विनौ मित्र ऋभवो धेनुर्मित्र इहेह वः ॥ १२२॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -1166,12 +1527,44 @@ title = "००४"
 देवर्षिपितृपूजार्थं पापाचान्त्रचाणि यच्छुनः ।  
 यस्य वै श्येनरूपेण आहरद्वृत्रहा मधु ॥ १२६ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 सोऽग्निं तु पञ्चदशभिर् इन्द्रं षोडशभिः परैः ।  
-ऋषिस्त्वामिति तुष्टाव सूक्तैरेति तु गौतमः ॥ १ २७॥  
+ऋषिस्त्वामिति तुष्टाव सूक्तैरेति तु गौतमः ॥ १२७॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+सोऽग्निं तु पञ्चदशभिर् इन्द्रं षोडशभिः परैः ।  
+ऋषिस्त्वामिति तुष्टाव सूक्तैरेति तु गौतमः ॥ १२७॥  
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स भ्रातरमिति त्वासु तिसृष्वग्निर्निपातभाक् ।  
-वरुणेनाभिसंस्तौति आहुरन्ये निपातिनम् । । १२८ ॥  
+वरुणेनाभिसंस्तौति आहुरन्ये निपातिनम् ॥१२८ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+स भ्रातरमिति त्वासु तिसृष्वग्निर्निपातभाक् ।  
+वरुणेनाभिसंस्तौति आहुरन्ये निपातिनम् ॥१२८ ॥  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 लिङ्गोक्तदैवते सूक्ते एके प्रत्यग्निरेव तु ।  
 ऋषिर्बोधदिति द्वाभ्यां स्तौति सोमकमेव तु ॥ १ २९॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+लिङ्गोक्तदैवते सूक्ते एके प्रत्यग्निरेव तु ।  
+ऋषिर्बोधदिति द्वाभ्यां स्तौति सोमकमेव तु ॥ १ २९॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -1246,12 +1639,44 @@ title = "००४"
 प्र सु ष विभ्यो नवभिर् ऋग्भिः श्येनस्य संस्तवः ।  
 पराभिस्त्वेति पञ्चर्चे सोमेनेन्द्र स्तुतः सह ॥ १३६ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 सोमप्रधानामैतां तु क्रौष्टुकिर्मन्यते स्तुतिम् ।  
-दिवश्चिदिति चैतेन तृचेनेन्द्रेण संस्तुताम् । । १ ३७॥  
+दिवश्चिदिति चैतेन तृचेनेन्द्रेण संस्तुताम् ॥१३७॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+सोमप्रधानामैतां तु क्रौष्टुकिर्मन्यते स्तुतिम् ।  
+दिवश्चिदिति चैतेन तृचेनेन्द्रेण संस्तुताम् ॥१३७॥  
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 उषसं मध्यमां मेने आचार्यः शाकटायनः ।  
 वाममृचि स्तुताश्चात्र भगः पूषेति चार्यमा ॥ १ ३८॥।  
+</details>
+
+<details><summary>मूलम्</summary>
+
+उषसं मध्यमां मेने आचार्यः शाकटायनः ।  
+वाममृचि स्तुताश्चात्र भगः पूषेति चार्यमा ॥ १ ३८॥।  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 करूळतीति पूषोक्तोऽदन्तकः स इति श्रुतेः ।  
 अस्माकमुत्तमं सूर्यं स्तौतित्याहाश्वलायनः ॥ १३ ९॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+करूळतीति पूषोक्तोऽदन्तकः स इति श्रुतेः ।  
+अस्माकमुत्तमं सूर्यं स्तौतित्याहाश्वलायनः ॥ १३ ९॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
