--- a/shAkalam/bRhad-devatA/6.md
+++ b/shAkalam/bRhad-devatA/6.md
@@ -1147,8 +1147,21 @@ title = "००६"
 अयं कृत्नुरिदं सौम्यं त्रोण्यैन्द्राणि पराण्यतः ।  
 नहीति तेषां प्रथमे वैश्वदेव्यृगवीवृधत् ॥ ९७ ॥
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 देवानामिति देवानां प्रेष्टमाग्नेयमुत्तरम् ।  
-त्रीण्याश्विनात्या म इति ऐन्द्राणि तमितीति च । । ९८ । ।  
+त्रीण्याश्विनात्या म इति ऐन्द्राणि तमितीति च ॥९८ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+देवानामिति देवानां प्रेष्टमाग्नेयमुत्तरम् ।  
+त्रीण्याश्विनात्या म इति ऐन्द्राणि तमितीति च ॥९८ ॥ 
+</details>
+
+
 २१-अपाला की कथा  
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
