--- a/shAkalam/bRhad-devatA/7.md
+++ b/shAkalam/bRhad-devatA/7.md
@@ -266,8 +266,19 @@ title = "००७"
 यज्ञं परोक्षवत्प्राह श्वशुरो नागतो मम ।  
 यद्यागच्छेद् भक्षयेत्स धानाः सोमं पिबेदपि ॥ ३१ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 इति तस्या वचः श्रुत्वा तत्क्षणादेत्य वज्रधृक् ।  
-तिष्ठन्वेद्यामुत्तरस्याम् उच्चैराह स रोरुवत् । । ३२ । ।  
+तिष्ठन्वेद्यामुत्तरस्याम् उच्चैराह स रोरुवत् ॥३२ ॥ 
+</details>
+
+<details><summary>मूलम्</summary>
+
+इति तस्या वचः श्रुत्वा तत्क्षणादेत्य वज्रधृक् ।  
+तिष्ठन्वेद्यामुत्तरस्याम् उच्चैराह स रोरुवत् ॥३२ ॥ 
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
