--- a/shAkalam/bRhad-devatA/8.md
+++ b/shAkalam/bRhad-devatA/8.md
@@ -1164,16 +1164,68 @@ title = "००८"
 अग्नेरेव तु गायत्र्य उष्णिहः सवितुः स्मृताः ।  
 अनुष्टुभस्तु सोमस्य बृहत्यस्तु बृहस्पतेः ॥ १०५ ॥
 </details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 पंक्त्यस्त्रिष्टुभश्चैव विद्यादैन्द्र्यश्च सर्वशः ।  
-विश्वेषां चैव देवानां जगत्यो यास्तु काश्चन । । १०६ ॥  
+विश्वेषां चैव देवानां जगत्यो यास्तु काश्चन ॥१०६ ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+पंक्त्यस्त्रिष्टुभश्चैव विद्यादैन्द्र्यश्च सर्वशः ।  
+विश्वेषां चैव देवानां जगत्यो यास्तु काश्चन ॥१०६ ॥  
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विराजश्चैव मित्रस्य स्वराजो वरुणस्य च ।  
-इन्द्रस्य निचृतः प्रोक्ता वायोश्च भुरिजः स्मृतः ॥ १ ०७॥  
+इन्द्रस्य निचृतः प्रोक्ता वायोश्च भुरिजः स्मृतः ॥ १०७॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विराजश्चैव मित्रस्य स्वराजो वरुणस्य च ।  
+इन्द्रस्य निचृतः प्रोक्ता वायोश्च भुरिजः स्मृतः ॥ १०७॥  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विषये यस्य वा स्यातां स्यातां वा वायुदेवते ।  
-यास्त्वतिछन्दसः काश्चित्ताः प्रजापतिदेवताः ॥ १ ०८॥  
+यास्त्वतिछन्दसः काश्चित्ताः प्रजापतिदेवताः ॥ १०८॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विषये यस्य वा स्यातां स्यातां वा वायुदेवते ।  
+यास्त्वतिछन्दसः काश्चित्ताः प्रजापतिदेवताः ॥ १०८॥  
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विच्छन्दसस्तु वायव्या मन्त्राः पादैश्च ये मिताः ।  
-पौरुष्यो द्विपदाः सर्वा ब्राह्म्य एकपदाः स्मृताः ॥१ ०९॥  
+पौरुष्यो द्विपदाः सर्वा ब्राह्म्य एकपदाः स्मृताः ॥१०९॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विच्छन्दसस्तु वायव्या मन्त्राः पादैश्च ये मिताः ।  
+पौरुष्यो द्विपदाः सर्वा ब्राह्म्य एकपदाः स्मृताः ॥१०९॥  
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 समस्ता ऋच आग्नेय्यो वायव्यानि यजूंषि च ।  
-सौर्याणि चैव सामानि सर्वाणि ब्राह्मणानि च ॥ ११ ०॥  
+सौर्याणि चैव सामानि सर्वाणि ब्राह्मणानि च ॥ ११०॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+समस्ता ऋच आग्नेय्यो वायव्यानि यजूंषि च ।  
+सौर्याणि चैव सामानि सर्वाणि ब्राह्मणानि च ॥ ११०॥  
+</details>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
