--- a/shAkalam/bRhad-devatA/4.md
+++ b/shAkalam/bRhad-devatA/4.md
@@ -688,8 +688,10 @@ title = "००४"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-ऋतौ स्नातामृषिर्भार्यां लोपमुद्रां यशस्विनीम् ।  
-उपजल्पितुमारेभे रहःसंयोगकाम्यया ॥ ५७॥ 
+ऋतौ **स्नाताम्** ऋषिर् भार्यां  
+लोपमुद्रां यशस्विनीम् ।  
+**उपजल्पितुम् आरेभे**  
+रहःसंयोगकाम्यया ॥ ५७॥ 
 </details>
 
 <details><summary>मूलम्</summary>
@@ -702,8 +704,10 @@ title = "००४"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-द्वाभ्यां सा त्वब्रवीदृग्भ्यां पूर्वीरिति चिकीर्षितम् ।  
-रिरंसुस्तामथागस्त्य उत्तराभ्यामतोषयत् ॥५८॥
+द्वाभ्यां सा त्व् अब्रवीद् ऋग्भ्यां  
+पूर्वीर् इति **चिकीर्षितम्** ।  
+**रिरंसुस्** ताम् अथागस्त्य  
+उत्तराभ्याम् **अतोषयत्** ॥५८॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -714,8 +718,10 @@ title = "००४"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-विदित्वा तपसा सर्वं तयोर्भावं रिरंसतोः ।  
-श्रुत्वैनः कृतवानस्मि ब्रह्मचार्युत्तमे जगौ ॥५९॥
+**विदित्वा** तपसा सर्वं  
+तयोर् भावं **रिरंसतोः** ।  
+"श्रुत्वैनः कृतवान् अस्मि"  
+ब्रह्मचार्य् उत्तमे **जगौ** ॥५९॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -726,8 +732,10 @@ title = "००४"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रशास्य तं परिष्वज्य गुरू मूर्ध्न्यवजघ्रतुः ।  
-स्मित्वैनमाहतुश्चोभाव् अनागा असि पुत्रक ॥६०॥  
+प्रशास्य तं **परिष्वज्य**  
+गुरू मूर्ध्न्य् **अवजघ्रतुः** ।  
+स्मित्वैनम् **आहतुश्** चोभाव्  
+"अनागा असि पुत्रक" ॥६०॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -739,8 +747,10 @@ title = "००४"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-युवो रजांसीति ततः सूक्तैः पञ्चभिरश्विनौ ।  
-अगस्त्य एव तुष्टाव कतरेति परेण तु ॥ ६१ ॥ 
+युवो रजांसीति ततः  
+सूक्तैः पञ्चभिर् अश्विनौ ।  
+अगस्त्य एव **तुष्टाव**  
+**कतरेति** परेण तु ॥ ६१ ॥ 
 </details>
 
 <details><summary>मूलम्</summary>
