--- a/shAkalam/saMhitA/sarva-prastutiH/10/131.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/131.md
@@ -1665,12 +1665,14 @@ The first pāda of 12 recasts that of 11: with sutrā́mā matching trātā́ram
 </details>
 <details><summary>Whitney</summary>
 
-########## Translation
+_________
+**Translation**  
 1. Let Indra be well-saving, well-aiding with aids, very gracious,  
    all-possessing; let him put down (*bādh*) hatred, let him make for us  
    fearlessness; may we be lords of wealth in heroes.
 
-########## Notes
+_________
+**Notes**  
 This hymn and the following are two successive verses in RV. (x. 131. 6,  
 7, or vi. 47. 12, 13), and are also found together in VS. (xx. 51, 52),  
 TS. (i. 7. 13⁴⁻⁵), and MS. (iv. 12. 5). All these agree in leaving out  
